# Xorion

./: .gitignore  CMakeLists.txt  DllMain.cpp  FULLAUTO_IMPLEMENTATION_SUMMARY.md  GameDataChecks.cpp  HOW_TO_FIND_SIGNATURES.md  Horion.vcxproj  README.md  Xorion.sln  Xorion.vcxproj  resource.h
Core/: Game.cpp  Game.h
Horion/: DrawUtils.cpp
Horion/Command/: CommandMgr.cpp  CommandMgr.h
Horion/Command/Commands/: ForceOpCommand.cpp  ForceOpCommand.h  GameModeCommand.cpp
Horion/Module/: ModuleManager.cpp  ModuleManager.h
Horion/Module/Modules/: AntiCheatBlocker.cpp  AntiCrystal.cpp  AntiCrystal.h  AutoAnchor.h  AutoSplitter.cpp  BedAura.h  BlockReach.cpp  ClickGuiMod.cpp  Criticals.h  CubeGlide.cpp  Dicker.cpp  Fly.cpp  FontChanger.h  InfiniteAura.cpp  InfiniteTreasureAura.cpp  Killaura.cpp  MaceHit.cpp  Module.h  NoFall.h  OffhandAllow.cpp  ReachDisplay.cpp  SeeCrystals.cpp  Spider.h  Unbanner.cpp  Unbanner.h
Horion/Render/: RenderGlobals.h  RenderUtils.h  Signatures.cpp  Signatures.h
Horion/Scripting/Functions/: DrawFunctions.cpp
Horion/Shaders/: UnlitTintVS.hlsl
Memory/: BootstrapHelpers.cpp  BootstrapHelpers.h  GameData.cpp  GameData.h  Hooks.cpp  Hooks.h  SignatureGlobals.cpp  SignatureGlobals.h  SignatureReport.cpp  SignatureResolver.cpp
SDK/: BlockLegacy.h  ClientInstance.h  Dimension.h  Entity.cpp  Entity.h  EntityList.h  GameMode.cpp  GameMode.h  GuiData.h  InitSDK.cpp  InitSDK.h  Inventory.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h  LevelRenderer.h  LocalPlayer.cpp  LocalPlayer.h  LoopbackPacketSender.h  MinecraftUIRenderContext.h  MoveInputHandler.h  OffsetConstants.h  Offsets.cpp  Offsets.h  Packet.h  Player.cpp  Player.h  PlayerMovementProxy.h  PlayerSignatures.h  PlayerSupplies.cpp  PlayerSupplies.h  RakNetConnector.h  Tessellator.h  Vec2.h  Vec3.h  Vec3i.h  VersionTag.h  XorionNameTag.cpp  XorionNameTag.h
Tests/: QuickTest.cpp  debug_player.cpp
Utils/: ClientColors.h  ColorUtil.h  Colors.h  FindSignatures.cpp  FindSignatures.h  SkinUtil.cpp  Target.cpp  Utils.cpp  Utils.h
Xorion/: DrawUtils.cpp  DrawUtils.h  ImmediateGui.cpp  ImmediateGui.h  Loader.cpp  Loader.h
Xorion/Command/: CommandMgr.cpp
Xorion/Command/Commands/: BindCommand.cpp  CommandBlockExploitCommand.cpp  ConfigCommand.cpp  CoordsCommand.cpp  DamageCommand.cpp  DeviceIDCommand.cpp  DupeCommand.cpp  EjectCommand.cpp  EnchantCommand.cpp  ExecuteCommand.cpp  FriendListCommand.cpp  GameModeCommand.cpp  GiveCommand.cpp  HelpCommand.cpp  HideCommand.cpp  ImpersonateCommand.cpp  ImpersonateCommand.h  ModulesCommand.cpp  NameSpoofCommand.cpp  NbtCommand.cpp  PanicCommand.cpp  PathCommand.cpp  PlayerTeleportCommand.cpp  RelativeTeleportCommand.cpp  RenameCommand.cpp  RepairCommand.cpp  SayCommand.cpp  ScriptCommand.cpp  SeedCommand.cpp  ServerCommand.cpp  SetLoreCommand.cpp  SetOffhandCommand.cpp  SetPrefixCommand.cpp  SpammerCommand.cpp  TeleportCommand.cpp  TestCommand.cpp  ToggleCommand.cpp  TopCommand.cpp  UnbindCommand.cpp  WaypointCommand.cpp  (+1 more)
Xorion/Config/: AccountInformation.cpp  ConfigManager.cpp  ConfigManager.h
Xorion/FriendList/: FriendsManager.cpp
Xorion/Menu/: ClickGui.cpp  TabGui.cpp
Xorion/Module/: ModuleManager.cpp  ModuleManager.h
Xorion/Module/Modules/: Aimbot.cpp  AirJump.cpp  AirStuck.cpp  AirSwim.cpp  AnchorNotifier.cpp  AnchorNotifier.h  AntiBot.cpp  AntiCheatBlocker.cpp  AntiCheatBlocker.h  AntiCheatDelete.cpp  AntiCheatDelete.h  AntiCrystal.cpp  AntiCrystal.h  AntiEffect.cpp  AntiEffect.h  AntiVoid.cpp  Arraylist.cpp  Arraylist.h  AutoAnchor.cpp  AutoArmor.cpp  AutoArmor.h  AutoClicker.cpp  AutoCrystal.cpp  AutoCrystal.h  AutoGapple.cpp  AutoSneak.cpp  AutoSprint.cpp  AutoTotem.cpp  BedAura.cpp  BedStack.cpp  BedStack.h  Bhop.cpp  Bhop.h  Blink.cpp  Blink.h  BlockReach.cpp  BoatFly.cpp  BoatFly.h  BoatSpeed.cpp  BoatSpeed.h  (+140 more)
Xorion/Render/: PlayerSignatures.h  RenderGlobals.cpp  RenderInit.cpp  RenderUtils.cpp  RenderUtils.h  Signatures.cpp  Signatures.h
Xorion/Scripting/: JsScriptModule.h  ScriptInstance.cpp  ScriptManager.cpp  ScriptManager.h
Xorion/Scripting/Functions/: EntityFunctions.cpp  EntityFunctions.h  GameFunctions.cpp  GlobalFunctions.cpp  InventoryFunctions.cpp  InventoryFunctions.h  LevelFunctions.cpp  LevelFunctions.h  LocalPlayerFunctions.cpp  ModuleManagerFunctions.cpp  ModuleManagerFunctions.h  Vector2Functions.cpp  Vector3Functions.cpp  XorionFunctions.cpp  XorionFunctions.h
Xorion/Shaders/: UnlitTintPS.hlsl  compile_shaders.bat
Xorion/path/: JoeMovementController.cpp
resources/: Xorion.rc
